About z-index bug fixed

--- a/src/components/styles/About.scss
+++ b/src/components/styles/About.scss
@@ -9,7 +9,7 @@
   box-sizing: border-box;
   overflow: hidden;
   position: relative;
-  z-index: 1000;
+  z-index: 1;
   .about__info {
     width: 100%;
     h3 {
